# ComfyUI-JoyHallo_wrapper

./: README.md  __init__.py  fp8_optimization.py  inference.json  inference.py  inference.yaml  pyproject.toml  requirements.txt
joyhallo/animate/: face_animate.py  face_animate_static.py
joyhallo/datasets/: audio_processor.py  image_processor.py  mask_image.py  talk_video.py
joyhallo/models/: attention.py  audio_proj.py  face_locator.py  image_proj.py  motion_module.py  mutual_self_attention.py  resnet.py  transformer_2d.py  transformer_3d.py  unet_2d_blocks.py  unet_2d_condition.py  unet_3d.py  unet_3d_blocks.py  wav2vec.py
joyhallo/utils/: config.py  util.py
workflow/: joy hallo wrapper + kokoro.json  joy hallo wrapper basic.json
